<resources>
    <string name="app_name"> </string>
    <string name="API_KEY">AIzaSyBVUjDqBCUdvBOBKYXaHLwLVAfyrYt_y1E</string>
    <string name="API_KEY_GOOGLE_MAP">AIzaSyCib9qs7gZVLfrmpoIwvtbUD8pyeIZXT6U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Chào mừng \nBạn đã quay trở lại!</string>
    <string name="no_have_account">Tạo một tài khoản mới? <u><font color='#249DB7'>Đăng ký</font></u> </string>
    <string name="have_account">Bạn đã có tài khoản? <u><font color='#249DB7'>Đăng Nhập</font></u> </string>
    <string name="register_text">Bấm vào nút <font color='#FF0000'>Đăng ký</font>, để xác nhận bạn đồng ý với các điều khoản</string>
    <string name="username_or_email">Tên đăng nhập hoặc email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="or_login_with">Hoặc đăng nhập bằng</string>
    <string name="or_register_with">Hoặc đăng ký bằng</string>
    <string name="create_account">Đăng ký</string>
    <string name="name">Họ tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="forgot_password">Quên \nmật khẩu?</string>
    <string name="create_your_account">Tạo \ntài khoản</string>
    <string name="verification_otp">Xác nhận \nmã otp</string>
    <string name="email_address">Nhập địa chỉ email của bạn</string>
    <string name="note_message">*Chúng tôi sẽ gửi một tin nhắn cho bạn để đặt hoặc lấy lại mật khẩu mới</string>
    <string name="note_otp">*Bạn kiểm tra tin nhắn trong hộp thư đã được gửi đến email</string>
    <string name="submit">Gửi</string>
    <string name="nav_category">Hạng mục</string>
    <string name="nav_home">Trang chính</string>
    <string name="nav_messenger">Tin nhắn</string>
    <string name="nav_shopping">Mua sắm</string>
    <string name="nav_notification">Thông báo</string>
    <string name="nav_user">Tôi</string>
    <string name="text_search">Tìm kiếm...</string>
    <string name="text_location">Vị trí</string>
    <string name="text_scope">Trong vòng 1km</string>
    <string name="text_category">Hạng mục</string>
    <string name="text_product">Sản phẩm</string>
    <string name="update_user_info">Cập nhật thông tin</string>
    <string name="update_password">Thay đổi mật khẩu</string>
    <string name="info_user_store">Cửa hàng của tôi</string>
    <string name="info_user_chat">Tin nhắn</string>
    <string name="sport">Hỗ trợ</string>
    <string name="setting">Cài đặt</string>
    <string name="log_out">Đăng xuất</string>


    <string name="no_internet_connection">Không có kết nối mạng</string>
    <string name="network_failure">Lỗi mạng</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="nav_search">Tìm kiếm</string>
    <string name="nav_order">Đơn hàng</string>
    <string name="username">Tên người dùng</string>
    <string name="last_message">Tin nhắn cuối</string>
    <string name="default_time">24-hour HH:mm</string>
    <string name="status_message_user">Đang hoạt động</string>
    <string name="create_new_password">Tạo mật khẩu mới.</string>
    <string name="text_change_password">Mật khâu mới của bạn phải nhập khác với mật khẩu bạn đang dùng.</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_type_new_password">Nhập lại mật khẩu</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="forgot_your_password">Bạn đã quên mật khẩu?</string>
    <string name="title">Tiêu đề</string>
    <string name="body">Body</string>

    <string name="zero">0</string>
    <string name="product">Tên sản phẩm</string>
    <string name="price">Giá</string>
    <string name="quantity">Số lượng</string>
    <string name="description">Mô tả của người bán</string>
    <string name="info_saler">Thông tin về người bán</string>
    <string name="name_saler">Tên người bán</string>
    <string name="address">Địa chỉ</string>
    <string name="send_message_saler">Gửi tin nhắn cho người bán</string>
    <string name="text_send_message">Mặt hàng này còn chứ?</string>
    <string name="hint_send_message">Gửi tin nhắn riêng...</string>
    <string name="checkout">Thanh toán</string>
    <string name="total_product_price">Tổng giá sản phẩm</string>
    <string name="discount">Giảm giá</string>
    <string name="order_total">Tổng số đơn hàng</string>
    <string name="info_user_order">Đơn hàng của tôi</string>
    <string name="search">Tìm kiểm ở đây</string>
    <string name="store_name">Cửa hàng</string>
    <string name="active_status_store"><font color='#4CAF50'>Đang mở cửa</font> • Mở lúc 08:00</string>
    <string name="direction">Đường đi</string>
    <string name="call">Gọi</string>
    <string name="message">Nhắn tin</string>
    <string name="delete">Xóa</string>
    <string name="process_order">Đang xử lý</string>
    <string name="completed_order">Đã giao</string>
    <string name="cancel_order">Đã hủy</string>
    <string name="order_code">Mã đơn hàng</string>
    <string name="total_price">Tổng tiền</string>
    <string name="into_money">Thành tiền</string>
    <string name="date">Ngày</string>
    <string name="status">Trạng thái</string>
    <string name="delivery_code">Mã người giao hàng</string>
    <string name="similator_product">Sản phẩm tương tự</string>
    <string name="error_send_message">Không thể gửi tin nhắn</string>
    <string name="my_cart">Giỏ hàng của tôi</string>
    <string name="empty_cart">Giỏ hàng trống</string>
    <string name="total_number_product">Tổng số sản phẩm</string>
    <string name="delivery_info">Thông tin vân chuyển</string>
    <string name="delivery_status">Trạng thái giao hàng</string>
    <string name="delivery_date">Ngày giao hàng</string>
    <string name="receive_info">Tên người nhận | Số điện thoại</string>
    <string name="delivery_address">Địa chỉ nhận hàng</string>
    <string name="you_need_support">Bạn cần hỗ trợ?</string>
    <string name="contact_shop">Liên hệ Shop</string>
    <string name="confirm_cancel">Xác nhận hủy</string>
    <string name="add_to_cart">Thêm giỏ hàng</string>
    <string name="reviews">Đánh giá</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="put_name_location">Nhập tên địa chỉ</string>
    <string name="title_put_name">Tìm kiếm địa ch</string>
    <string name="accept">Chấp nhận</string>
    <string name="default_text_message">Aa...</string>
    <string name="message_empty">Không có tin nhắn nào!</string>
    <string name="review_product">Đánh giá sản phẩm</string>
    <string name="home">HOME</string>
    <string name="hello">Xin chào</string>
    <string name="info_user">Hồ sơ người dùng</string>
    <string name="sub_info_user">Họ tên, email, địa chỉ</string>
    <string name="sub_info_user_order">Đơn đang giao, hoàn thành, hủy bỏ</string>
    <string name="sub_info_user_store">Quản lý các giá trị mặt hàng của bạn</string>
    <string name="sub_info_user_chat">Lịch sử tin nhắn của bạn</string>
    <string name="sub_info_user_wallet">Thanh toán, thẻ quà tặng, tín dụng</string>
    <string name="sub_info_user_logout">Đăng xuất tài khoản</string>
    <string name="sub_info_user_setting">Bảo mật và thông báo</string>
    <string name="sub_info_user_support">Giải đáp thắc mắc 24/7</string>
    <string name="info_user_wallet">Ví tiền</string>
    <string name="phone">Số điện thoại</string>
    <string name="facebook_app_id">629383743411294</string>
    <string name="fb_login_protocol_scheme">fb629383743411294</string>
    <string name="facebook_client_token">ec2571fadd7ce2b07bd84f1ea104a640</string>

</resources>