<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_product"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/active_status_store"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"
                android:drawableStart="@drawable/baseline_directions_24"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:background="@drawable/bg_button2"
                android:drawableStart="@drawable/baseline_call_24"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:layout_margin="5dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:background="@drawable/bg_button2"
                android:drawableStart="@drawable/baseline_send_24"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>