<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:background="@color/defaultColor"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:id="@+id/item_order_tvOrderCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_code"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/text"/>
            <TextView
                android:id="@+id/item_order_tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/item_order_tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                />
            <TextView
                android:id="@+id/item_order_tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>