<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.password.PasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F5"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/create_new_password"
                    android:textSize="16sp"
                    android:layout_margin="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#E3E3E3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/text_change_password"
                    android:textSize="13sp"
                    android:layout_margin="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:id="@+id/change_edOldPassword"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:background="@drawable/border_shadow"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:id="@+id/change_edNewPassword"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:background="@drawable/border_shadow"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_type_new_password"
                    android:id="@+id/change_edConfirmPassword"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:background="@drawable/border_shadow"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:padding="5dp"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/change_btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:background="@drawable/bg_button_cancel"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"
                        android:id="@+id/change_btnSave"
                        android:background="@drawable/bg_button_save"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</FrameLayout>