<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.launch.register.RegisterAccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_account"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_margin="10dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:src="@drawable/user"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_camera_alt_24"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_shadow"
                android:hint="@string/name"
                android:padding="15dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_shadow"
                android:hint="@string/username_or_email"
                android:padding="15dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_shadow"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"/>

            <EditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_shadow"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/register_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg4"
                android:padding="15dp"
                android:text="@string/create_account"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/have_account"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>