<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/item_history_message_linear"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:visibility="visible">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_history_message_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:src="@drawable/ic_launcher_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/item_history_message_tvName"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_time"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAlignment="textEnd"
                android:id="@+id/item_history_message_tvTime"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_message"
            android:textSize="12sp"
            android:id="@+id/item_history_message_tvMessage"
            />
    </LinearLayout>
</LinearLayout>